--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>nerds</title>
     <link rel="stylesheet" href="css/normalize.css" type="text/css">
     <link rel="stylesheet" href="css/main.css" type="text/css">
-      <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
   </head>
   <body>
     <div class="enter">
@@ -312,5 +312,8 @@
       </footer>
 
     </div>
+  <script type="text/javascript" src="js/main.js">
+
+  </script>
   </body>
 </html>
