content overflow is fixed

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </a>
           </div>
 
-          <div class="product-item product-item_right">
+          <div class="product-item">
             <header class="product-header">
               <img src="css/img/illustration-3.png" alt="images">
             </header>
